tests/baselines/reference/ModuleWithExportedAndNonExportedEnums.errors.txt
tests/cases/conformance/internalModules/exportDeclarations/ModuleWithExportedAndNonExportedEnums.ts(10,11): error TS2551: Property 'Day' does not exist on type 'typeof A'. Did you mean 'Color'?


==== tests/cases/conformance/internalModules/exportDeclarations/ModuleWithExportedAndNonExportedEnums.ts (1 errors) ====
    module A {
        export enum Color { Red, Blue }
        enum Day { Monday, Tuesday }
    }
    
    // not an error since exported
    var a: A.Color = A.Color.Red;
    
    // error not exported
    var b = A.Day.Monday;
              ~~~
!!! error TS2551: Property 'Day' does not exist on type 'typeof A'. Did you mean 'Color'?
    